syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.wagner";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";
import "google/protobuf/timestamp.proto";     // trabalhar com datas e hora

package br.com.zup.wagner;

// service 1
service KeyManagerRegistraChavePixService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {} // 1

}

// service 2

service KeyManagerRemoveChavePixService {
  rpc delete (DeleteChavePixRequest) returns (DeleteChavePixResponse) {} // 2
}

// service 3

service  KeyManagerCarregaChavePixService {
  rpc carrega (CarregaChavePixRequest) returns (CarregaChavePixResponse) {}
}

enum TipoDeChave {
  DEFAULT_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;

}

enum  TipoDeConta {
  DEFAULT_TIPO_DE_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}
// estrutura de dados de entrada / end point cadastrar
message RegistraChavePixRequest {
  string clientId = 1;
  TipoDeChave tipoDeChave = 2;
  string valorChave = 3;
  TipoDeConta tipoDeConta = 4;


}
// estrutura de dados de saida / end pint cadastrar
message RegistraChavePixResponse {
  string clientId =1;
  string pixId = 2;
}

// estrutura de dados de entrada / end point delete
message  DeleteChavePixRequest {
  string pixId = 1;
  string identificadorItau = 2;

}
// estrutura de dados de saida / end point delete
message  DeleteChavePixResponse {
  string pixId = 1;
  string identificadorItau = 2;
}

// estrutura de dados do serviço 3 / end point carrega

message CarregaChavePixRequest{

  message  FiltroPorPixId {
    string clientId = 1;
    string pixId = 2;
  }
  FiltroPorPixId pixId = 1;
  string chave = 2;
}

// estrutura de dados do serviço 3 / end point carrega

message CarregaChavePixResponse {
  string identificadorItau = 1;
  string tipoDeChave = 2;
  string chave = 3;
  string instituicao = 4;
  string ispb = 5;
  string agencia = 6;
  string numeroConta = 7;
  string titular = 8;
  string cpf = 9;
  string idInterno = 10;
  string criadoEm = 11;

}



